force-app/main/default/objects/FSM_InfraDataCaptureLineItem2__c/FSM_InfraDataCaptureLineItem2__c.object-meta.xml
<CustomObject>
    <description>Created as a part of SFS-3958</description>
    <label>Infra Data Capture Line Item 2</label>
    <nameField>
        <label>Infra Data Capture Line Item 2 Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Infra Data Capture Line Item 2</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>