force-app/main/default/objects/FSM_InfraDataCaptureLineItem2__c/fields/FSM_AffectedArea1__c.field-meta.xml
<CustomField>
    <fullName>FSM_AffectedArea1__c</fullName>
    <description>Created as part of SFS-4790</description>
    <label>Affected area 1</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Main building</fullName>
            </value>
            <value>
                <fullName>Cellar inhabited</fullName>
            </value>
            <value>
                <fullName>Cellar uninhabited</fullName>
            </value>
            <value>
                <fullName>Int garage(adj door)</fullName>
            </value>
            <value>
                <fullName>Int garage</fullName>
            </value>
            <value>
                <fullName>Det garage/Out build</fullName>
            </value>
            <value>
                <fullName>Garden/Driveway</fullName>
            </value>
            <value>
                <fullName>Highway/Footpath</fullName>
            </value>
            <value>
                <fullName>Public area</fullName>
            </value>
            <value>
                <fullName>Field</fullName>
            </value>
            <value>
                <fullName>Watercourse</fullName>
            </value>
            <value>
                <fullName>None</fullName>
            </value>
            <value>
                <fullName>Ext non-dom Boundary</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>