force-app/main/default/objects/FSM_InfraDataCaptureLineItem2__c/fields/FSM_AreaM__c.field-meta.xml
<CustomField>
    <fullName>FSM_AreaM__c</fullName>
    <description>Created as part of SFS-4790</description>
    <label>Area covered (m2)</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Non-Visible</fullName>
            </value>
            <value>
                <fullName>&lt;2</fullName>
            </value>
            <value>
                <fullName>2-5</fullName>
            </value>
            <value>
                <fullName>5-10</fullName>
            </value>
            <value>
                <fullName>&gt;10</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>