force-app/main/default/objects/FSM_InfraDataCaptureLineItem2__c/fields/FSM_CleanupInMins__c.field-meta.xml
<CustomField>
    <fullName>FSM_CleanupInMins__c</fullName>
    <description>Created as part of SFS-4790</description>
    <label>How long did cleanup take? (min)</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Not done</fullName>
            </value>
            <value>
                <fullName>&lt;15</fullName>
            </value>
            <value>
                <fullName>&gt;=15</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>