force-app/main/default/objects/FSM_InfraDataCaptureLineItem2__c/fields/FSM_DamageComments__c.field-meta.xml
<CustomField>
    <fullName>FSM_DamageComments__c</fullName>
    <description>Created as a part of SFS-4790</description>
    <label>Damage comments</label>
    <length>500</length>
    <type>LongTextArea</type>
</CustomField>