force-app/main/default/objects/FSM_InfraDataCaptureLineItem2__c/fields/FSM_DepthInches__c.field-meta.xml
<CustomField>
    <fullName>FSM_DepthInches__c</fullName>
    <description>Created as part of SFS-4790</description>
    <label>Depth (inches)</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Non-Visible</fullName>
            </value>
            <value>
                <fullName>&lt;1</fullName>
            </value>
            <value>
                <fullName>&gt;=1, &lt;3</fullName>
            </value>
            <value>
                <fullName>&gt;=3, &lt;6</fullName>
            </value>
            <value>
                <fullName>&gt;=6</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>