force-app/main/default/objects/FSM_InfraDataCaptureLineItem2__c/fields/FSM_DetailsOfEvent__c.field-meta.xml
<CustomField>
    <fullName>FSM_DetailsOfEvent__c</fullName>
    <description>Created as part of SFS-4810</description>
    <label>Details of event</label>
    <length>255</length>
    <type>Text</type>
</CustomField>