force-app/main/default/objects/FSM_InfraDataCaptureLineItem2__c/fields/FSM_EscapeDuration__c.field-meta.xml
<CustomField>
    <fullName>FSM_EscapeDuration__c</fullName>
    <description>Created as part of SFS-4790</description>
    <label>Duration of escape (hrs)</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>&lt;1</fullName>
            </value>
            <value>
                <fullName>&gt;=1, &lt;4</fullName>
            </value>
            <value>
                <fullName>&gt;=4, &lt;8</fullName>
            </value>
            <value>
                <fullName>&gt;=8, &lt;12</fullName>
            </value>
            <value>
                <fullName>&gt;=12, &lt;24</fullName>
            </value>
            <value>
                <fullName>&gt;=24</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>