force-app/main/default/objects/FSM_InfraDataCaptureLineItem2__c/fields/FSM_EventDate__c.field-meta.xml
<CustomField>
    <fullName>FSM_EventDate__c</fullName>
    <description>Created as part of SFS-4810</description>
    <label>Event Date</label>
    <type>DateTime</type>
</CustomField>