force-app/main/default/objects/FSM_InfraDataCaptureLineItem2__c/fields/FSM_Incident3__c.field-meta.xml
<CustomField>
    <fullName>FSM_Incident3__c</fullName>
    <description>Created as part of SFS-4790</description>
    <label>Incident at Location 3</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Flooding</fullName>
            </value>
            <value>
                <fullName>Escape of sewage</fullName>
            </value>
            <value>
                <fullName>RTU</fullName>
            </value>
            <value>
                <fullName>Surcharge</fullName>
            </value>
            <value>
                <fullName>Smell</fullName>
            </value>
            <value>
                <fullName>Noise</fullName>
            </value>
            <value>
                <fullName>Nuisance</fullName>
            </value>
            <value>
                <fullName>Safety</fullName>
            </value>
            <value>
                <fullName>Pollution</fullName>
            </value>
            <value>
                <fullName>Flooding due to jett</fullName>
            </value>
            <value>
                <fullName>No incident found</fullName>
                <default>true</default>
                <label>No incident found</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>