force-app/main/default/objects/FSM_InfraDataCaptureLineItem2__c/fields/FSM_InfraDataCaptureForm2__c.field-meta.xml
<CustomField>
    <fullName>FSM_InfraDataCaptureForm2__c</fullName>
    <description>Created as part of SFI-1204</description>
    <label>Infra Data Capture Form 2</label>
    <referenceTo>FSM_InfraDataCaptureForm2__c</referenceTo>
    <relationshipLabel>FSM_InfraDataCaptureLineItem2</relationshipLabel>
    <relationshipName>FSM_InfraDataCaptureLineItem2</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>