force-app/main/default/objects/FSM_InfraDataCaptureLineItem2__c/fields/FSM_LineItem__c.field-meta.xml
<CustomField>
    <fullName>FSM_LineItem__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>SFI-2041</description>
    <label>Line Item</label>
    <referenceTo>FSM_InfraDataCaptureLineItem2__c</referenceTo>
    <relationshipLabel>Infra Data Capture Line Item 2</relationshipLabel>
    <relationshipName>Infra_Data_Capture_Line_Item_2</relationshipName>
    <type>Lookup</type>
</CustomField>