force-app/main/default/objects/FSM_InfraDataCaptureLineItem2__c/fields/FSM_LineSequenceNumber__c.field-meta.xml
<CustomField>
    <fullName>FSM_LineSequenceNumber__c</fullName>
    <description>SFI-2974</description>
    <label>Line Sequence Number</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>