force-app/main/default/objects/FSM_InfraDataCaptureLineItem2__c/fields/FSM_NoOfLineItemsEformsOfSameType__c.field-meta.xml
<CustomField>
    <fullName>FSM_NoOfLineItemsEformsOfSameType__c</fullName>
    <description>SFI-1721</description>
    <label>No of line items EForms of same type</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>