force-app/main/default/objects/FSM_InfraDataCaptureLineItem2__c/fields/FSM_SectionType__c.field-meta.xml
<CustomField>
    <fullName>FSM_SectionType__c</fullName>
    <description>Created as part of SFS-4810
Updated as part of SFS-4790</description>
    <label>Section Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>PIA PIR</fullName>
            </value>
            <value>
                <fullName>Incident at Location</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>