force-app/main/default/objects/FSM_InfraDataCaptureLineItem2__c/fields/FSM_SewageInBuildingComments__c.field-meta.xml
<CustomField>
    <fullName>FSM_SewageInBuildingComments__c</fullName>
    <description>Created as part of SFS-4790</description>
    <label>Sewage in Building Comments</label>
    <length>500</length>
    <type>LongTextArea</type>
</CustomField>