force-app/main/default/objects/FSM_InfraDataCaptureLineItem2__c/fields/FSM_SIRCity__c.field-meta.xml
<CustomField>
    <fullName>FSM_SIRCity__c</fullName>
    <description>Created as part of SFS-4790</description>
    <label>City</label>
    <length>80</length>
    <type>Text</type>
</CustomField>