force-app/main/default/objects/FSM_InfraDataCaptureLineItem2__c/fields/FSM_SIRCommentsForLocation__c.field-meta.xml
<CustomField>
    <fullName>FSM_SIRCommentsForLocation__c</fullName>
    <description>Created as part of SFS-4790</description>
    <label>Comments for this location</label>
    <type>TextArea</type>
</CustomField>