force-app/main/default/objects/FSM_InfraDataCaptureLineItem2__c/fields/FSM_SIRHouseName__c.field-meta.xml
<CustomField>
    <fullName>FSM_SIRHouseName__c</fullName>
    <description>Created as part for SFS-4790</description>
    <label>House Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>