force-app/main/default/objects/FSM_InfraDataCaptureLineItem2__c/fields/FSM_SIRHouseNumber__c.field-meta.xml
<CustomField>
    <fullName>FSM_SIRHouseNumber__c</fullName>
    <description>Created as part of SFS-4790</description>
    <label>House No</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>