force-app/main/default/objects/FSM_InfraDataCaptureLineItem2__c/fields/FSM_SIRHowManyPhotosTaken__c.field-meta.xml
<CustomField>
    <fullName>FSM_SIRHowManyPhotosTaken__c</fullName>
    <description>SFS-6842</description>
    <label>How many photos were taken?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
            <value>
                <fullName>4&gt;</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>