force-app/main/default/objects/FSM_InfraDataCaptureLineItem2__c/fields/FSM_SIRInterceptorIndicator__c.field-meta.xml
<CustomField>
    <fullName>FSM_SIRInterceptorIndicator__c</fullName>
    <defaultValue>false</defaultValue>
    <description>SFS-6842</description>
    <label>Interceptor ind</label>
    <type>Checkbox</type>
</CustomField>