force-app/main/default/objects/FSM_InfraDataCaptureLineItem2__c/fields/FSM_SIROccupiersName__c.field-meta.xml
<CustomField>
    <fullName>FSM_SIROccupiersName__c</fullName>
    <description>Created as part of SFS-4790</description>
    <label>Occupier&apos;s Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>