force-app/main/default/objects/FSM_InfraDataCaptureLineItem2__c/fields/FSM_SIRPostCode__c.field-meta.xml
<CustomField>
    <fullName>FSM_SIRPostCode__c</fullName>
    <description>Created as part of SFS-4790</description>
    <label>Post Code</label>
    <length>80</length>
    <type>Text</type>
</CustomField>