force-app/main/default/objects/FSM_InfraDataCaptureLineItem2__c/fields/FSM_SIRPropertyType__c.field-meta.xml
<CustomField>
    <fullName>FSM_SIRPropertyType__c</fullName>
    <description>SFS-6842</description>
    <label>Property type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Domestic</fullName>
            </value>
            <value>
                <fullName>Industrial</fullName>
            </value>
            <value>
                <fullName>Commercial</fullName>
            </value>
            <value>
                <fullName>Shop</fullName>
            </value>
            <value>
                <fullName>Hospital</fullName>
            </value>
            <value>
                <fullName>School</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>