force-app/main/default/objects/FSM_InfraDataCaptureLineItem2__c/fields/FSM_SIRTelephoneNo__c.field-meta.xml
<CustomField>
    <fullName>FSM_SIRTelephoneNo__c</fullName>
    <description>Created as part of SFS-4790
Updated as a part of SFL-702</description>
    <label>Telephone No.</label>
    <length>30</length>
    <type>Text</type>
</CustomField>