force-app/main/default/objects/FSM_InfraDataCaptureLineItem2__c/fields/FSM_SIRTown__c.field-meta.xml
<CustomField>
    <fullName>FSM_SIRTown__c</fullName>
    <description>Created as part of SFS-4970</description>
    <label>Town</label>
    <length>80</length>
    <type>Text</type>
</CustomField>