force-app/main/default/objects/FSM_InfraDataCaptureLineItem2__c/fields/FSM_UsageRestricted__c.field-meta.xml
<CustomField>
    <fullName>FSM_UsageRestricted__c</fullName>
    <description>Created as part of SFS-4790</description>
    <label>Usage Restricted?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>