force-app/main/default/objects/FSM_InfraDataCaptureLineItem2__c/fields/FSM_WhereSewageEscapeFrom__c.field-meta.xml
<CustomField>
    <fullName>FSM_WhereSewageEscapeFrom__c</fullName>
    <description>Created as part of SFS-4790</description>
    <label>Where did sewage escape from?</label>
    <length>80</length>
    <type>Text</type>
</CustomField>