force-app/main/default/objects/FSM_InfraDataCaptureLineItem2__c/fields/FSM_WorkOrder__c.field-meta.xml
<CustomField>
    <fullName>FSM_WorkOrder__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Work Order</label>
    <referenceTo>WorkOrder</referenceTo>
    <relationshipLabel>Infra Data Capture Line Item 2 (Work Order)</relationshipLabel>
    <relationshipName>FSM_InfraDataCaptureLineItem2</relationshipName>
    <type>Lookup</type>
</CustomField>