force-app/main/default/objects/FSM_InfraDataCaptureLineItem2__c/recordTypes/FSM_Incident_at_Location.recordType-meta.xml
<RecordType>
    <fullName>FSM_Incident_at_Location</fullName>
    <active>true</active>
    <label>Incident at Location</label>
</RecordType>