force-app/main/default/objects/FSM_InfraDataCaptureLineItem2__c/recordTypes/FSM_PIAPIR.recordType-meta.xml
<RecordType>
    <fullName>FSM_PIAPIR</fullName>
    <active>true</active>
    <label>PIA PIR</label>
</RecordType>